test_make/ParGramatyka.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from ParGramatyka.y
-----------------------------------------------------------------------------

state 114 contains 1 shift/reduce conflicts.

rule 36 is unused
rule 37 is unused
rule 38 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListStmt                                (4)
	Stmt -> Type ListItem ';'                          (5)
	Stmt -> Type Ident '(' ListArg ')' FBlock          (6)
	Stmt -> ';'                                        (7)
	Stmt -> Block                                      (8)
	Stmt -> Ident '=' Expr ';'                         (9)
	Stmt -> Ident '++' ';'                             (10)
	Stmt -> Ident '--' ';'                             (11)
	Stmt -> 'if' '(' Expr ')' Stmt                     (12)
	Stmt -> 'if' '(' Expr ')' Stmt 'else' Stmt         (13)
	Stmt -> 'while' '(' Expr ')' Stmt                  (14)
	Stmt -> Expr ';'                                   (15)
	Arg -> Type Ident                                  (16)
	Arg -> 'ref' Type Ident                            (17)
	Ret -> 'return' Expr ';'                           (18)
	ListArg ->                                         (19)
	ListArg -> Arg                                     (20)
	ListArg -> Arg ',' ListArg                         (21)
	FBlock -> '{' ListStmt Ret '}'                     (22)
	Block -> '{' ListStmt '}'                          (23)
	ListStmt ->                                        (24)
	ListStmt -> Stmt ListStmt                          (25)
	Item -> Ident                                      (26)
	Item -> Ident '=' Expr                             (27)
	ListItem -> Item                                   (28)
	ListItem -> Item ',' ListItem                      (29)
	Type -> 'int'                                      (30)
	Type -> 'string'                                   (31)
	Type -> 'bool'                                     (32)
	Type -> Type '(' ListAType ')'                     (33)
	AType -> Type                                      (34)
	AType -> 'ref' Type                                (35)
	ListType ->                                        (36)
	ListType -> Type                                   (37)
	ListType -> Type ',' ListType                      (38)
	ListAType ->                                       (39)
	ListAType -> AType                                 (40)
	ListAType -> AType ',' ListAType                   (41)
	Expr6 -> '(' ListArg ')' '=>' Type FBlock          (42)
	Expr6 -> Ident                                     (43)
	Expr6 -> Integer                                   (44)
	Expr6 -> 'true'                                    (45)
	Expr6 -> 'false'                                   (46)
	Expr6 -> Ident '(' ListExpr ')'                    (47)
	Expr6 -> String                                    (48)
	Expr6 -> '(' Expr ')'                              (49)
	Expr5 -> '-' Expr6                                 (50)
	Expr5 -> '!' Expr6                                 (51)
	Expr5 -> Expr6                                     (52)
	Expr4 -> Expr4 MulOp Expr5                         (53)
	Expr4 -> Expr5                                     (54)
	Expr3 -> Expr3 AddOp Expr4                         (55)
	Expr3 -> Expr4                                     (56)
	Expr2 -> Expr2 RelOp Expr3                         (57)
	Expr2 -> Expr3                                     (58)
	Expr1 -> Expr2 '&&' Expr1                          (59)
	Expr1 -> Expr2                                     (60)
	Expr -> Expr1 '||' Expr                            (61)
	Expr -> Expr1                                      (62)
	ListExpr ->                                        (63)
	ListExpr -> Expr                                   (64)
	ListExpr -> Expr ',' ListExpr                      (65)
	AddOp -> '+'                                       (66)
	AddOp -> '-'                                       (67)
	MulOp -> '*'                                       (68)
	MulOp -> '/'                                       (69)
	MulOp -> '%'                                       (70)
	RelOp -> '<'                                       (71)
	RelOp -> '<='                                      (72)
	RelOp -> '>'                                       (73)
	RelOp -> '>='                                      (74)
	RelOp -> '=='                                      (75)
	RelOp -> '!='                                      (76)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	'++'           { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'--'           { PT _ (TS _ 12) }
	'/'            { PT _ (TS _ 13) }
	';'            { PT _ (TS _ 14) }
	'<'            { PT _ (TS _ 15) }
	'<='           { PT _ (TS _ 16) }
	'='            { PT _ (TS _ 17) }
	'=='           { PT _ (TS _ 18) }
	'=>'           { PT _ (TS _ 19) }
	'>'            { PT _ (TS _ 20) }
	'>='           { PT _ (TS _ 21) }
	'bool'         { PT _ (TS _ 22) }
	'else'         { PT _ (TS _ 23) }
	'false'        { PT _ (TS _ 24) }
	'if'           { PT _ (TS _ 25) }
	'int'          { PT _ (TS _ 26) }
	'ref'          { PT _ (TS _ 27) }
	'return'       { PT _ (TS _ 28) }
	'string'       { PT _ (TS _ 29) }
	'true'         { PT _ (TS _ 30) }
	'while'        { PT _ (TS _ 31) }
	'{'            { PT _ (TS _ 32) }
	'||'           { PT _ (TS _ 33) }
	'}'            { PT _ (TS _ 34) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	Stmt            rules 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15
	Arg             rules 16, 17
	Ret             rule  18
	ListArg         rules 19, 20, 21
	FBlock          rule  22
	Block           rule  23
	ListStmt        rules 24, 25
	Item            rules 26, 27
	ListItem        rules 28, 29
	Type            rules 30, 31, 32, 33
	AType           rules 34, 35
	ListType        rules 36, 37, 38
	ListAType       rules 39, 40, 41
	Expr6           rules 42, 43, 44, 45, 46, 47, 48, 49
	Expr5           rules 50, 51, 52
	Expr4           rules 53, 54
	Expr3           rules 55, 56
	Expr2           rules 57, 58
	Expr1           rules 59, 60
	Expr            rules 61, 62
	ListExpr        rules 63, 64, 65
	AddOp           rules 66, 67
	MulOp           rules 68, 69, 70
	RelOp           rules 71, 72, 73, 74, 75, 76

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram_internal -> . Program               (rule 0)

	'!'            shift, and enter state 18
	'('            shift, and enter state 19
	'-'            shift, and enter state 20
	';'            shift, and enter state 21
	'bool'         shift, and enter state 22
	'false'        shift, and enter state 23
	'if'           shift, and enter state 24
	'int'          shift, and enter state 25
	'string'       shift, and enter state 26
	'true'         shift, and enter state 27
	'while'        shift, and enter state 28
	'{'            shift, and enter state 29
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 30
	L_quoted       shift, and enter state 31
	%eof           reduce using rule 24

	Ident          goto state 3
	Integer        goto state 4
	String         goto state 5
	Program        goto state 6
	Stmt           goto state 7
	Block          goto state 8
	ListStmt       goto state 9
	Type           goto state 10
	Expr6          goto state 11
	Expr5          goto state 12
	Expr4          goto state 13
	Expr3          goto state 14
	Expr2          goto state 15
	Expr1          goto state 16
	Expr           goto state 17

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'||'           reduce using rule 1


State 3

	Stmt -> Ident . '=' Expr ';'                        (rule 9)
	Stmt -> Ident . '++' ';'                            (rule 10)
	Stmt -> Ident . '--' ';'                            (rule 11)
	Expr6 -> Ident .                                    (rule 43)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 47)

	'!='           reduce using rule 43
	'%'            reduce using rule 43
	'&&'           reduce using rule 43
	'('            shift, and enter state 65
	'*'            reduce using rule 43
	'+'            reduce using rule 43
	'++'           shift, and enter state 66
	'-'            reduce using rule 43
	'--'           shift, and enter state 67
	'/'            reduce using rule 43
	';'            reduce using rule 43
	'<'            reduce using rule 43
	'<='           reduce using rule 43
	'='            shift, and enter state 68
	'=='           reduce using rule 43
	'>'            reduce using rule 43
	'>='           reduce using rule 43
	'||'           reduce using rule 43


State 4

	Expr6 -> Integer .                                  (rule 44)

	'!='           reduce using rule 44
	'%'            reduce using rule 44
	'&&'           reduce using rule 44
	')'            reduce using rule 44
	'*'            reduce using rule 44
	'+'            reduce using rule 44
	','            reduce using rule 44
	'-'            reduce using rule 44
	'/'            reduce using rule 44
	';'            reduce using rule 44
	'<'            reduce using rule 44
	'<='           reduce using rule 44
	'=='           reduce using rule 44
	'>'            reduce using rule 44
	'>='           reduce using rule 44
	'||'           reduce using rule 44


State 5

	Expr6 -> String .                                   (rule 48)

	'!='           reduce using rule 48
	'%'            reduce using rule 48
	'&&'           reduce using rule 48
	')'            reduce using rule 48
	'*'            reduce using rule 48
	'+'            reduce using rule 48
	','            reduce using rule 48
	'-'            reduce using rule 48
	'/'            reduce using rule 48
	';'            reduce using rule 48
	'<'            reduce using rule 48
	'<='           reduce using rule 48
	'=='           reduce using rule 48
	'>'            reduce using rule 48
	'>='           reduce using rule 48
	'||'           reduce using rule 48


State 6

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 7

	ListStmt -> Stmt . ListStmt                         (rule 25)

	'!'            shift, and enter state 18
	'('            shift, and enter state 19
	'-'            shift, and enter state 20
	';'            shift, and enter state 21
	'bool'         shift, and enter state 22
	'false'        shift, and enter state 23
	'if'           shift, and enter state 24
	'int'          shift, and enter state 25
	'return'       reduce using rule 24
	'string'       shift, and enter state 26
	'true'         shift, and enter state 27
	'while'        shift, and enter state 28
	'{'            shift, and enter state 29
	'}'            reduce using rule 24
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 30
	L_quoted       shift, and enter state 31
	%eof           reduce using rule 24

	Ident          goto state 3
	Integer        goto state 4
	String         goto state 5
	Stmt           goto state 7
	Block          goto state 8
	ListStmt       goto state 64
	Type           goto state 10
	Expr6          goto state 11
	Expr5          goto state 12
	Expr4          goto state 13
	Expr3          goto state 14
	Expr2          goto state 15
	Expr1          goto state 16
	Expr           goto state 17

State 8

	Stmt -> Block .                                     (rule 8)

	'!'            reduce using rule 8
	'('            reduce using rule 8
	'-'            reduce using rule 8
	';'            reduce using rule 8
	'bool'         reduce using rule 8
	'else'         reduce using rule 8
	'false'        reduce using rule 8
	'if'           reduce using rule 8
	'int'          reduce using rule 8
	'return'       reduce using rule 8
	'string'       reduce using rule 8
	'true'         reduce using rule 8
	'while'        reduce using rule 8
	'{'            reduce using rule 8
	'}'            reduce using rule 8
	L_Ident        reduce using rule 8
	L_integ        reduce using rule 8
	L_quoted       reduce using rule 8
	%eof           reduce using rule 8


State 9

	Program -> ListStmt .                               (rule 4)

	%eof           reduce using rule 4


State 10

	Stmt -> Type . ListItem ';'                         (rule 5)
	Stmt -> Type . Ident '(' ListArg ')' FBlock         (rule 6)
	Type -> Type . '(' ListAType ')'                    (rule 33)

	'('            shift, and enter state 63
	L_Ident        shift, and enter state 2

	Ident          goto state 60
	Item           goto state 61
	ListItem       goto state 62

State 11

	Expr5 -> Expr6 .                                    (rule 52)

	'!='           reduce using rule 52
	'%'            reduce using rule 52
	'&&'           reduce using rule 52
	')'            reduce using rule 52
	'*'            reduce using rule 52
	'+'            reduce using rule 52
	','            reduce using rule 52
	'-'            reduce using rule 52
	'/'            reduce using rule 52
	';'            reduce using rule 52
	'<'            reduce using rule 52
	'<='           reduce using rule 52
	'=='           reduce using rule 52
	'>'            reduce using rule 52
	'>='           reduce using rule 52
	'||'           reduce using rule 52


State 12

	Expr4 -> Expr5 .                                    (rule 54)

	'!='           reduce using rule 54
	'%'            reduce using rule 54
	'&&'           reduce using rule 54
	')'            reduce using rule 54
	'*'            reduce using rule 54
	'+'            reduce using rule 54
	','            reduce using rule 54
	'-'            reduce using rule 54
	'/'            reduce using rule 54
	';'            reduce using rule 54
	'<'            reduce using rule 54
	'<='           reduce using rule 54
	'=='           reduce using rule 54
	'>'            reduce using rule 54
	'>='           reduce using rule 54
	'||'           reduce using rule 54


State 13

	Expr4 -> Expr4 . MulOp Expr5                        (rule 53)
	Expr3 -> Expr4 .                                    (rule 56)

	'!='           reduce using rule 56
	'%'            shift, and enter state 57
	'&&'           reduce using rule 56
	')'            reduce using rule 56
	'*'            shift, and enter state 58
	'+'            reduce using rule 56
	','            reduce using rule 56
	'-'            reduce using rule 56
	'/'            shift, and enter state 59
	';'            reduce using rule 56
	'<'            reduce using rule 56
	'<='           reduce using rule 56
	'=='           reduce using rule 56
	'>'            reduce using rule 56
	'>='           reduce using rule 56
	'||'           reduce using rule 56

	MulOp          goto state 56

State 14

	Expr3 -> Expr3 . AddOp Expr4                        (rule 55)
	Expr2 -> Expr3 .                                    (rule 58)

	'!='           reduce using rule 58
	'&&'           reduce using rule 58
	')'            reduce using rule 58
	'+'            shift, and enter state 54
	','            reduce using rule 58
	'-'            shift, and enter state 55
	';'            reduce using rule 58
	'<'            reduce using rule 58
	'<='           reduce using rule 58
	'=='           reduce using rule 58
	'>'            reduce using rule 58
	'>='           reduce using rule 58
	'||'           reduce using rule 58

	AddOp          goto state 53

State 15

	Expr2 -> Expr2 . RelOp Expr3                        (rule 57)
	Expr1 -> Expr2 . '&&' Expr1                         (rule 59)
	Expr1 -> Expr2 .                                    (rule 60)

	'!='           shift, and enter state 46
	'&&'           shift, and enter state 47
	')'            reduce using rule 60
	','            reduce using rule 60
	';'            reduce using rule 60
	'<'            shift, and enter state 48
	'<='           shift, and enter state 49
	'=='           shift, and enter state 50
	'>'            shift, and enter state 51
	'>='           shift, and enter state 52
	'||'           reduce using rule 60

	RelOp          goto state 45

State 16

	Expr -> Expr1 . '||' Expr                           (rule 61)
	Expr -> Expr1 .                                     (rule 62)

	')'            reduce using rule 62
	','            reduce using rule 62
	';'            reduce using rule 62
	'||'           shift, and enter state 44


State 17

	Stmt -> Expr . ';'                                  (rule 15)

	';'            shift, and enter state 43


State 18

	Expr5 -> '!' . Expr6                                (rule 51)

	'('            shift, and enter state 19
	'false'        shift, and enter state 23
	'true'         shift, and enter state 27
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 30
	L_quoted       shift, and enter state 31

	Ident          goto state 35
	Integer        goto state 4
	String         goto state 5
	Expr6          goto state 42

State 19

	Expr6 -> '(' . ListArg ')' '=>' Type FBlock         (rule 42)
	Expr6 -> '(' . Expr ')'                             (rule 49)

	'!'            shift, and enter state 18
	'('            shift, and enter state 19
	')'            reduce using rule 19
	'-'            shift, and enter state 20
	'bool'         shift, and enter state 22
	'false'        shift, and enter state 23
	'int'          shift, and enter state 25
	'ref'          shift, and enter state 41
	'string'       shift, and enter state 26
	'true'         shift, and enter state 27
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 30
	L_quoted       shift, and enter state 31

	Ident          goto state 35
	Integer        goto state 4
	String         goto state 5
	Arg            goto state 37
	ListArg        goto state 38
	Type           goto state 39
	Expr6          goto state 11
	Expr5          goto state 12
	Expr4          goto state 13
	Expr3          goto state 14
	Expr2          goto state 15
	Expr1          goto state 16
	Expr           goto state 40

State 20

	Expr5 -> '-' . Expr6                                (rule 50)

	'('            shift, and enter state 19
	'false'        shift, and enter state 23
	'true'         shift, and enter state 27
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 30
	L_quoted       shift, and enter state 31
